--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "nodemon": "^2.0.15"
+    "express-react-views": "^0.11.0",
+    "nodemon": "^2.0.15",
+    "on": "^1.3.0",
+    "react": "^16.14.0",
+    "terminal": "^0.1.4",
+    "your": "^0.2.3"
   }
 }
